1.2.0-devel unreleased
======================

 * Updated installation tests, as ATCT is no longer 'quickinstalled' anymore.
   [hannosch]

 * removed schemata='default' for allowDiscussion field in finalizeATCTSchema.
   It makes no sense and prevents customization by patching.
   [ender]

 * Moved fields of content types into several schemas.
   [fschulze]

 * Removed properties tab, as we now use the all-schemas-on-one-page feature
   of Archetypes.
   [fschulze]

 * Some general test cleanup in order to make the test output readable.
   [hannosch]

 * Removed the view alias of index.html for all standard content types. This
   makes it possible to create and upload files called index.html to the
   site, which is quite common when batch importing old sites into the site.
   As someone might rely on the former behaviour, we do not migrate
   any existing type information. This closes
   http://dev.plone.org/plone/ticket/4837.
   [hannosch]

 * Got rid of last remnants of zLOG. Grep is our friend!
   [stefan]

1.2.0-alpha1 2006-10-02
=======================

 * Fixed some minor i18n issues.
   [hannosch]

 * Reworked i18n of Python scripts to use the new MessageFactory and based
   portal status messages on the statusmessages product.
   [hannosch]

 * Changed criteria definitions to use Zope3 Messages for localizing
   descriptions and labels instead of the old Archetypes approach using special
   attributes. Added a ATCTMessageFactory for the Messages in the
   'atcontenttypes' i18n domain.
   [hannosch]

 * Fixed some imports of transaction_note from CMFPlone to CMFPlone.utils.
   [hannosch]

 * Fixed deprecation warnings for TALValidator.
   [hannosch]

 * Changed type definitions to use Zope3 Messages for localizing descriptions
   and labels instead of the old Archetypes approach using special attributes.
   [hannosch]

 * Removed ZConfig based configuration of the topic tool as it is now handled